<resources>
    <string name="app_name">sk8-shop</string>
    <string name="user_login">User Login</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="email_logo">Email Logo</string>
    <string name="password_logo">Password Logo</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="welcome_screen">WELCOME SCREEN</string>
    <string name="on_boarding">On-Boarding</string>
    <string name="forward_arrow">Forward Arrow</string>
    <string name="welcome_card_supporting_text">A place for browsing your favorite skatboard brands &amp; accessories.\n\nClick on the \"Floating Action Button\" for further instructions on how to use this app.</string>
    <string name="alien_gif">Alien Gif</string>
    <string name="skateboarding_background_image">skateboarding background image</string>
    <string name="instructions">Instructions</string>
    <string name="extended_floating_action_button">Extended Floating Action Button</string>
    <string name="let_s_go">Let\'s Go!</string>
    <string name="help_animation">Help Animation</string>
    <string name="new_decks">New Decks</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Closed</string>
    <string name="instructions_supporting_text">Since we are a fairly new business, we only have a select list of accessories to choose from and need your help!\nWe encourage you to provide us with feedback by clicking the [+] button in our Listings page to navigate to our Details page.\nOnce there, you can fill out any number of item details to submit to our listings page in order to promote the next fire product.\nGive it a try!</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string-array name="brand_choices">
        <item>DarkStar</item>
        <item>Element</item>
        <item>Toy Machine</item>
    </string-array>
    <string-array name="category_choices">
        <item>Decks</item>
        <item>Wheels</item>
        <item>Trucks</item>
    </string-array>
</resources>