<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <!-- Login -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.sventripikal.sk8_shop.screens.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_from_left_to_middle"
            app:exitAnim="@anim/slide_from_middle_to_left"
            app:popEnterAnim="@anim/slide_from_left_to_middle"
            app:popExitAnim="@anim/slide_from_middle_to_left"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- Welcome -->
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.sventripikal.sk8_shop.screens.WelcomeFragment"
        android:label="@string/on_boarding"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>

    <!-- Instructions -->
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.sventripikal.sk8_shop.screens.InstructionsFragment"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_instructions" >
        <action
            android:id="@+id/action_instructionsFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_instructionsFragment_to_listingsFragment"
            app:destination="@id/listingsFragment"
            app:enterAnim="@anim/slide_from_left_to_middle"
            app:exitAnim="@anim/slide_from_middle_to_left"
            app:popEnterAnim="@anim/slide_from_left_to_middle"
            app:popExitAnim="@anim/slide_from_middle_to_left"
            app:popUpTo="@id/loginFragment" />
    </fragment>

    <!-- Listings -->
    <fragment
        android:id="@+id/listingsFragment"
        android:name="com.sventripikal.sk8_shop.screens.ListingsFragment"
        android:label="@string/listings"
        tools:layout="@layout/fragment_listings" />

</navigation>